--- a/react-sorting-hat/package.json
+++ b/react-sorting-hat/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.5.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.1.2",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
